Aggiunto paginazione, filtri ordinamento prezzo e disponibilità in magazzino. Categorie cliccabili e aggiunta delle immagini. Creato un footer di prova e modifiche sullo stile generale (in attesa di riscontro)

--- a/TitanFrontend/src/App.css
+++ b/TitanFrontend/src/App.css
@@ -1,7 +1,14 @@
+/* App.css */
 #root {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+}
+
+.main-container {
+  display: flex;
+  align-items: flex-start; /* Allinea gli elementi in alto */
+  gap: 20px; /* Spazio tra la sezione filtri e i prodotti */
 }
 
 .logo {
