--- a/TitanFrontend/src/components/Filters/Filters.css
+++ b/TitanFrontend/src/components/Filters/Filters.css
@@ -1,11 +1,12 @@
-
+/* Filters.css */
 .filters-container {
-    padding: 20px;
+    padding: 25px;
     background-color: var(--background-light);
     border: 1px solid var(--primary-color);
     border-radius: 8px;
-    width: 20%;
-    float: left;
+    width: 250px; /* Aumenta la larghezza della sezione filtri */
+    margin-top: 90px; /* Spazio per abbassare i filtri */
+    margin-right: 20px; /* Spazio tra filtri e lista prodotti */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -17,16 +18,17 @@
 
 .filters-container label {
     display: flex;
-    align-items: center; /* Allinea verticalmente la label e la checkbox */
+    align-items: center;
     margin-bottom: 10px;
 }
 
 .filters-container input[type="checkbox"] {
-    margin-right: 10px; /* Distanza tra la checkbox e la label */
+    margin-right: 10px;
 }
 
 .filters-container input[type="text"],
-.filters-container button {
+.filters-container button,
+.filters-container select {
     margin: 10px 0;
     padding: 10px;
     width: 100%;
@@ -39,6 +41,7 @@
 }
 
 .filters-container input[type="text"]:focus,
-.filters-container button:focus {
+.filters-container button:focus,
+.filters-container select:focus {
     border-color: var(--secondary-color);
 }
