--- a/TitanFrontend/src/components/ProductList/ProductList.css
+++ b/TitanFrontend/src/components/ProductList/ProductList.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid var(--primary-color);
-    padding: 20px;
+    padding: 1rem;
     border-radius: 8px;
     background-color: var(--background-dark);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -32,7 +32,7 @@
 
 .product-item h4 {
     margin-top: 10px;
-    font-size: 1.2em;
+    font-size: 1.1em;
     color: var(--primary-color);
 }
 
