Modifiche al carrello e alla lista dei prodotti (inserimento descrizione e immagine di prova

--- a/TitanFrontend/src/components/ProductList/ProductList.css
+++ b/TitanFrontend/src/components/ProductList/ProductList.css
@@ -57,6 +57,12 @@
     color: var(--text-color-light);
 }
 
+.product-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
 .product-item .detail-button {
     background-color: lightblue;
     color: black;
